--- a/src/static/App.css
+++ b/src/static/App.css
@@ -76,13 +76,13 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 .start-course-btn:active {
     /* background: url(./learn_more_btn.png); */
     background-size: 100% 100%;
-    background-color: rgba(237, 192, 150, 0.5);
+    background-color: rgba(131, 127, 124, 0.5);
 }
 .start-course-btn:hover {
     /* background: url(./learn_more_btn.png); */
     transition: all .4s ease 0s;
     background-size: 100% 100%;
-    background-color: rgba(237, 192, 150, 0.5);
+    background-color: rgba(186, 183, 179, 0.5);
     transform: scale(1.2);
 
 }
@@ -93,7 +93,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
     background-position: top;
     background-size: 100% 100%;
     background-color: rgba(250, 248, 248, 0.5);
-    border: 5px solid rgba(90, 67, 56, 0.994);
+    border: 5px solid rgba(25, 24, 24, 0.994);
     outline: none;
     
     font-family: soleil,fantasy;
@@ -110,9 +110,9 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 /*  主页下半截 */
 #root{
   background: url(./xiabeijing2.jpg);
-  background-size: contain;
+  background-size: cover;
   /* background-color: rgba(224, 156, 156, 0.535); */
-  /*background-position: 50%;*/
+  background-position: 50%;
 }
 .zombie-container {
     padding-top: 0px;
@@ -123,7 +123,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 }
 
 .zombie-container .area{
-    background-color: rgba(255, 252, 252, 0.5);
+    background-color: rgba(250, 248, 248, 0.632);
     padding: 20px; 
     height: min-content;
 }
@@ -140,7 +140,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
     /* background: url(./learn_more_btn.png); */
     background-position: 50% 20px;
     background-size: 90%;
-    background-color: rgba(237, 192, 150, 0.5);
+    background-color: rgba(124, 117, 109, 0.5);
     background-repeat: no-repeat;
     border: none;
     outline: none;
@@ -177,7 +177,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
     
     display: flex!important;
     /* color: unset; */
-    color:rgb(29, 20, 20);
+    /* color:rgb(227, 212, 212) */
 }
 /* 所有猫咪 卡里猫咪的位置 */
 .game-card .zombie-parts{
@@ -191,15 +191,15 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
     left: 50%;
     top: 51vh;
     font-size: 40px;
-    color: rgb(128, 37, 37);
     width: 48vh;
     margin-left: -8vh;
     text-align: center;
+    /* color: rgb(51, 38, 25); */
     transform: scale(1);
-    background-color: rgba(99, 86, 147, 0.725)!important;
+    background-color: rgba(200, 197, 192, 0.725)!important;
 }
 .card-header:first-child {
-    background-color: rgb(26, 57, 57);
+    background-color: aqua;
     border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
 }
 .hide-overflow-text {
@@ -208,11 +208,11 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
     white-space: nowrap;
     overflow: hidden;
     /* background-color: rgba(248, 205, 198)!important;; */
-    color:rgba(0, 0, 0, 0.994)
+    color:rgba(83, 81, 81, 0.994)
 }
 /* ？  */
 .bg-dark {
-    background-color: rgb(95, 28, 28)!important;
+    background-color: rgb(164, 157, 157)!important;
 }
 .game-card[active='1'] {
     transform: rotate(5deg);
@@ -239,7 +239,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 /* detail page 信息框背景颜色 */
 .zombie-detail dl{
     display: inline-block;
-    background-color: rgba(215, 175, 111, 0.725)!important;
+    background-color: rgba(255, 255, 255, 0.5)!important;
     padding: 30px 0px;
 }
 /* detail page 框里文字相关属性 */
@@ -274,7 +274,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
     transition: all .6s ease 0s;
     /* -webkit-filter: brightness(70%); */
     /* filter: brightness(130%); */
-    background-color: rgb(249, 208, 154);
+    background-color: rgb(188, 186, 183);
     
 }
 .attack-btn {
@@ -290,8 +290,10 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
     outline: none;
     font-family: soleil,fantasy;
     font-size: 40px;
-    text-shadow: 0 2px 7px rgb(127, 80, 80);
-    color: rgb(159, 111, 60);
+    /* text-shadow: 0 2px 7px rgb(127, 80, 80); */
+    text-shadow: 0 2px 7px rgb(111, 83, 17);
+    color: rgb(64, 59, 22);
+    /* color: rgb(159, 111, 60); */
     height: 77px;
     width: 400px;
     margin-top: 50px;
@@ -310,8 +312,10 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
     line-height: 30px;
     font-size: 28px;
     text-align: center;
-    background-color: rgb(179, 136, 61);
-    color: rgb(0, 0, 0);
+    background-color: rgba(228, 239, 247, 0.975);
+    /* text-shadow: 0 2px 7px rgb(111, 83, 17); */
+    color: rgb(64, 59, 22);
+    /* color: rgb(159, 111, 60); */
     padding: 10px;
     border: 5px solid rgb(15, 15, 15);
 }
@@ -331,45 +335,18 @@ button a,button a:hover{
     margin-top: 0px;
     padding-top: 0px;
 }
-/* .target-card{
+.target-card{
     transform: none;
-    background-image: url(./biankuang.png);
+    background-image: url(./kuang.jpg);
     background-size: 85%;
     background-repeat: no-repeat;
     background-position: center;
     padding-top: 100px;
-} */
+}
 .target-card:hover{
     transform: none;
 }
-.modal{
-    position: absolute;
-    background: rgba(122, 164, 99, 0.8);
-    top: 25px;
-    left: 10%;
-    right: 10%;
-    padding: 15px;
-    z-index: 999;
-}
-.battelArea{
-    display: flex;
-    min-height: 300px;
-}
-.battelArea .targetZombie,.battelArea .myZombie{
-    width: 33%;
-    margin-top: -200px;
-    transform: scale(0.5);
-}
-.battelArea .myZombie{
-    transform: rotateY(180deg) scale(0.5);
-}
-.battelArea .vs{
-    width: 33%;
-    font-size: 100px;
-    color: #fff;
-    font-weight: bolder;
-    line-height: 300px;
-}
+
 .pay-btn:hover {
     -webkit-transition: all .6s ease 0s;
     transition: all .6s ease 0s;
@@ -381,7 +358,7 @@ button a,button a:hover{
     cursor: pointer;
     /* background: url(./button.png); */
     /* background-color: moccasin; */
-    background-color: rgba(190, 175, 175, 0.5);
+    background-color: rgba(201, 198, 198, 0.5);
     border: 5px solid rgba(60, 64, 40, 0.994);
     border-radius: 45px;
     background-position: top;
@@ -391,7 +368,7 @@ button a,button a:hover{
     outline: none;
     font-family: soleil,fantasy;
     font-size: 20px;
-    text-shadow: 0 2px 7px #000;
+    text-shadow: 0 2px 5px #000;
     color: rgb(60,64,40);
     height: 50px;
     width: 300px;
@@ -456,3 +433,4 @@ button a,button a:hover{
 .lowcase{
     text-transform: lowercase;
 }
+ 
